<resources>
    <string name="app_name">Plants Shop</string>
    <string name="welcome">Welcome</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_blank_fragment1" />
    <string name="hello_blank_fragment2" />
    <string name="hello_blank_fragment3" />
    <string name="your_order_placed_successfully_for_more_details_check_orders">Your order placed successfully. For more details, Check orders.</string>
    <string name="congratulations">Congratulations</string>
    <string name="notification">Notification</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="deliever_to">Deliever To</string>
    <string name="next">Next</string>
    <string name="sub_total">Sub Total</string>
    <string name="TV_dollarSign">$</string>
    <string name="add_new_address">Add New Address</string>
    <string name="pay_now">Pay Now</string>
    <string name="final_review">Final Review</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="change">Change</string>
    <string name="use_this_as_deliver_address">Use this as deliver address</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string name="activity_title_about_us">About Us</string>

    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_activity_main_drawer">MainDrawerActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_open">Open</string>
    <!--to toggle the open close button
       of the navigation drawer-->
    <string name="nav_close">Close</string>
    <string name="first_slide_title">Search Your Location</string>
    <!--On Boarding-->
    <!--Titles-->
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>
    <string name="first_slide_desc">You can search any place nearby or with-in the specified city. We will display specific or all related shops to match your search. </string>
    <!--Descriptions-->
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can perform bookings as well.</string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place by follwing simple steps.</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket then you don\'t have to worry about anything.  </string>
    <string name="skip_btn">Skip</string>
    <!--Buttons-->
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>
    <string name="dialog_message"> The Item is Added To Cart</string>
    <string name="dialog_title"> Done </string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="no">No</string>
    <string name="delete_item">Delete Item</string>
    <string name="delete_item_message">Are you sure you want to delete this item</string>
    <string name="yes">Yes</string>
    <string name="items_of">Items Of</string>
    <string name="your_order_is_on_it_s_way">Your Order is On it\'s Way</string>
    <string name="we_will_inform_you_as_soon_as_it_reaches_your_nearest_hub">We Will inform you as soon as it reaches your nearest hub</string>
    <string name="orders">Orders</string>
    <string name="view_details">View Details</string>
    <string name="cash">Cash</string>
    <string name="creditcard">Credit Card</string>
    <string name="add_card_number">Add Card Number</string>
    <string name="checkout">CheckOut</string>
    <string name="valid_email_address">Enter Valid Email Address</string>
    <string name="valid_phone_number">Enter Valid Phone Number </string>
    <string name="valid_password">Enter Valid Password</string>
    <string name="valid_confirm_password">Please Match Your Passwords</string>
    <string name="valid_first_name">Enter Valid First Name</string>
    <string name="valid_last_name">Enter Valid Last Name</string>

    <string name="sign_out">Sign Out</string>
    <string name="facebook_app_id">255935402734590</string>
    <string name="fb_login_protocol_scheme">fb255935402734590</string>

</resources>