<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinalReviewActivity">

    <ImageView
        android:layout_width="@dimen/_50sdp"
        android:layout_height="match_parent"
        android:src="@drawable/rectangle">

    </ImageView>

    <ImageButton
        android:id="@+id/Ibtn_backarrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/ic_baseline_arrow_back_black_24"/>


    <TextView
        android:id="@+id/TV_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/final_review"
        android:textColor="@color/font_color"
        android:textSize="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_centerHorizontal="true" />



    <TextView
        android:id="@+id/btn_ChangeList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change"
        android:textColor="@color/blue"
        android:alpha="0.5"
        android:textSize="@dimen/_11sdp"
        android:layout_below="@+id/TV_title"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_10sdp" />
    <ListView
        android:id="@+id/rv"
        android:layout_below="@+id/btn_ChangeList"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
         android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/button_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scrollbars="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="@dimen/_26sdp"
        tools:ignore="UnknownId" />

    <TextView
        android:id="@+id/TV_shippingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shipping_address"
        android:textColor="@color/font_color"
        android:textSize="@dimen/_14sdp"
        android:layout_below="@+id/rv"
          android:layout_marginLeft="@dimen/_58sdp"
        android:layout_marginTop="@dimen/_22sdp" />
 <ImageView
    android:layout_width="@dimen/_25sdp"
    android:layout_height="@dimen/_25sdp"
    android:id="@+id/iv_AddressICon"
    android:src="@drawable/ic_twotone_home_work_24"
     android:layout_below="@+id/TV_shippingText"
    android:layout_marginLeft="@dimen/_10sdp"
    android:layout_marginTop="@dimen/_22sdp">
</ImageView>
    <TextView
        android:id="@+id/tv_Address"
        android:layout_width="@dimen/_160sdp"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:textSize="@dimen/_11sdp"
         android:layout_below="@+id/TV_shippingText"
        android:text="Calvin Reyold 97 Bellevue Dr.Gkebdale Heights, IL 60139"
        android:layout_toEndOf="@+id/iv_AddressICon"
        android:layout_marginLeft="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_26sdp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_PayNow"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_44sdp"
        android:layout_below="@+id/iv_AddressICon"
        android:layout_marginTop="@dimen/_50sdp"
        android:background="@drawable/btn_shape"
        android:textSize="@dimen/_16sdp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/_58sdp"
        android:layout_marginRight="@dimen/_36sdp"
        android:drawableRight="@drawable/ic_arrow_forward_black_24dp"
        android:paddingRight="@dimen/_26sdp"
         android:text="@string/checkout"
        android:textAllCaps="false"/>


</RelativeLayout>