<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".DeliverActivity">


    <ImageView
        android:layout_width="@dimen/_50sdp"
        android:layout_height="match_parent"
        android:src="@drawable/rectangle">

    </ImageView>

    <ImageButton
        android:id="@+id/Ibtn_backarrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/ic_baseline_arrow_back_black_24"/>


    <TextView
        android:id="@+id/TV_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deliever_to"
        android:textColor="@color/font_color"
        android:textSize="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_centerHorizontal="true" />
<RelativeLayout
    android:id="@+id/Rl"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_50sdp"
    android:layout_below="@+id/TV_title"
    android:layout_marginTop="@dimen/_30sdp"
     android:background="@color/black">
    <TextView
        android:id="@+id/TV_NumOfItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3"
        android:gravity="center"
        android:textSize="@dimen/_11sdp"
        android:textAllCaps="false"
         android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/_30sdp"
        android:textColor="@color/white">

    </TextView>
    <TextView
        android:id="@+id/TV_Items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Items"
        android:gravity="center"
        android:textSize="@dimen/_11sdp"
        android:textAllCaps="false"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/_9sdp"
        android:layout_toEndOf="@+id/TV_NumOfItems"
        android:textColor="@color/white">
    </TextView>
    <TextView
        android:id="@+id/TV_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="In Cart"
        android:gravity="center"
        android:textSize="@dimen/_11sdp"
        android:textAllCaps="false"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/_4sdp"
        android:layout_toEndOf="@+id/TV_Items"
        android:textColor="@color/white">

    </TextView>
    <TextView
        android:id="@+id/TV_SubTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub_total"
        android:textSize="@dimen/_11sdp"
        android:textAllCaps="false"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/TV_cart"
        android:layout_marginLeft="@dimen/_75sdp"
        android:textColor="@color/white">
    </TextView>

    <TextView
        android:id="@+id/TV_TotalPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="125"
        android:gravity="left"
        android:textSize="@dimen/_11sdp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/_6sdp"
        android:layout_toEndOf="@+id/TV_SubTotal"
        android:textColor="@color/white">
    </TextView>
</RelativeLayout>

    <RelativeLayout
        android:id="@+id/bb"
        android:layout_width="match_parent"
        android:layout_below="@+id/Rl"
        android:layout_marginTop="@dimen/_36sdp"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_AddressICon"
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_26sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:src="@drawable/ic_twotone_home_work_24"
            />
        <TextView
            android:id="@+id/tv_Address"
            android:layout_width="@dimen/_160sdp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_28sdp"
            android:layout_toEndOf="@+id/iv_AddressICon"
            android:textColor="@color/font_color"
            android:alpha="0.8"
              android:hint="Add Your Address "
            android:textColorHint="@color/grey"
            android:textSize="@dimen/_12sdp" />

        <ImageView
            android:id="@+id/iv_editAddress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
            android:src="@drawable/edit"
            android:layout_alignParentRight="true"
            android:alpha="0.4"
            android:layout_marginRight="@dimen/_16sdp">
        </ImageView>

        <View
            android:id="@+id/view"
            android:layout_width="@dimen/_190sdp"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_toEndOf="@+id/iv_AddressICon"
            android:layout_below="@+id/tv_Address"
            android:alpha="0.3"
            android:background="@color/grey"
            />


        <RelativeLayout
            android:id="@+id/rl2"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_below="@+id/view"
            android:layout_toEndOf="@+id/iv_AddressICon"
            android:layout_marginTop="@dimen/_9sdp"
            android:paddingLeft="@dimen/_16sdp"
            android:paddingRight="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_8sdp">

            <RadioButton
                android:id="@+id/RB_btn"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginRight="@dimen/_6sdp"
                 android:buttonTint="@color/light_green"
                android:checked="true"
                android:gravity="center" />


            <TextView
                android:id="@+id/TV_addresstitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/RB_btn"
                android:layout_marginLeft="@dimen/_3sdp"
                android:text="@string/use_this_as_deliver_address"
                android:textSize="@dimen/_10sdp"
                android:layout_centerInParent="true"
                android:textColor="@color/black"       />




        </RelativeLayout>






    </RelativeLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginLeft="@dimen/_38sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_28sdp"
        android:layout_below="@+id/bb"
        android:background="@color/grey"
        android:alpha="0.3"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_AddNewAddress"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_39sdp"
        android:layout_below="@+id/view1"
        android:layout_marginTop="@dimen/_80sdp"
        android:background="@drawable/grey_btn"
        android:textSize="@dimen/_11sdp"
        android:textColor="@color/white"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/_16sdp"
         android:text="@string/add_new_address"
        android:textAllCaps="false"/>

<!--    <RelativeLayout-->
<!--        android:id="@+id/rl_payment"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@+id/btn_AddNewAddress"-->
<!--        android:layout_marginTop="@dimen/_46sdp">-->
<!--     <TextView-->
<!--         android:layout_width="wrap_content"-->
<!--         android:layout_height="wrap_content"-->
<!--         android:text=" Add Payment "-->
<!--  android:textColor="@color/font_color"-->
<!--        android:textSize="@dimen/_15sdp"-->
<!--        android:layout_marginLeft="@dimen/_16sdp"-->
<!--          android:layout_centerHorizontal="true"/>-->

<!--        -->

<!--    </RelativeLayout>-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_44sdp"
        android:layout_below="@+id/btn_AddNewAddress"
        android:layout_marginTop="@dimen/_120sdp"
        android:background="@drawable/btn_shape"
        android:textSize="@dimen/_17sdp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginLeft="@dimen/_58sdp"
        android:layout_marginRight="@dimen/_36sdp"
        android:drawableRight="@drawable/ic_arrow_forward_black_24dp"
        android:paddingRight="@dimen/_26sdp"
        android:drawablePadding="@dimen/_100sdp"
        android:text="@string/next"
         android:textAllCaps="false"/>




</RelativeLayout>