<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentActivity">

    <ImageView
        android:layout_width="@dimen/_50sdp"
        android:layout_height="match_parent"
        android:src="@drawable/rectangle">

    </ImageView>

    <ImageButton
        android:id="@+id/Ibtn_backarrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/ic_baseline_arrow_back_black_24"/>


    <TextView
        android:id="@+id/TV_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Payment"
        android:textColor="@color/font_color"
        android:textSize="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_centerHorizontal="true" />
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
     android:id="@+id/ll1"
    android:layout_below="@+id/TV_title"
    android:layout_marginRight="@dimen/_55sdp"
    android:layout_marginTop="@dimen/_55sdp"
    android:layout_marginLeft="@dimen/_55sdp">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/myRadioGroup"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_35sdp"

        android:checkedButton="@+id/sound" >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/font_color"
            android:id="@+id/rb_Cash"
            android:text="@string/cash" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_CreditCard"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/font_color"
            android:text="@string/creditcard" />


    </RadioGroup>


</RelativeLayout>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_25sdp"
        android:layout_below="@+id/ll1"
        android:layout_marginLeft="@dimen/_66sdp"
         android:layout_marginRight="@dimen/_16sdp"
        android:background="@drawable/payment"
        android:layout_marginTop="@dimen/_16sdp"
        android:gravity="right"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll"
        android:layout_marginLeft="@dimen/_50sdp"
        android:layout_marginRight="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:id="@+id/ll2"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add Card Number"
        android:layout_marginLeft="@dimen/_2sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/et_CardNumber"
        android:layout_width="match_parent"
        android:gravity="left"
        android:padding="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_height="@dimen/_30sdp"
        android:textSize="@dimen/_12sdp"
        android:hint="578125457125"
        android:inputType="number"
        android:drawableRight="@drawable/ic_baseline_lock_24"
        android:background="@drawable/border">

    </EditText>
</LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll2"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_35sdp"
            android:id="@+id/ll3"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CVV"
                android:layout_marginLeft="@dimen/_35sdp"
                android:textSize="@dimen/_12sdp"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/_50sdp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/et_Cvv"
                android:layout_width="@dimen/_50sdp"
                android:inputType="number"
                android:gravity="left"
                android:padding="@dimen/_5sdp"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/_22sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_height="@dimen/_30sdp"
                android:textSize="@dimen/_12sdp"
                android:hint="122"
                android:background="@drawable/border">

            </EditText>
        </LinearLayout>


    <LinearLayout
        android:id="@+id/ll4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll3"
        android:layout_marginLeft="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginRight="@dimen/_6sdp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll3"
            android:layout_marginLeft="@dimen/_19sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_2sdp"
                android:text="Exp Month"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/et_ExpMonth"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/border"
                android:inputType="number"
                android:gravity="left"
                android:hint="02"
                android:padding="@dimen/_5sdp"
                android:textSize="@dimen/_12sdp">

            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll3"
            android:layout_marginLeft="@dimen/_73sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:orientation="vertical">


            <TextView
                android:layout_width="93dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_36sdp"
                android:layout_marginRight="@dimen/_50sdp"
                android:text="Exp Year"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/et_ExpYear"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="right"
                android:inputType="number"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_22sdp"
                android:background="@drawable/border"
                android:gravity="left"
                android:hint="23"
                android:padding="@dimen/_5sdp"
                android:textSize="@dimen/_12sdp">

            </EditText>

        </LinearLayout>

    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_44sdp"
        android:layout_below="@+id/ll4"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/btn_shape"
        android:textSize="@dimen/_17sdp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginLeft="@dimen/_58sdp"
        android:layout_marginRight="@dimen/_36sdp"
        android:drawableRight="@drawable/ic_arrow_forward_black_24dp"
        android:paddingRight="@dimen/_26sdp"
        android:drawablePadding="@dimen/_80sdp"
        android:text="@string/checkout"
        android:textAllCaps="false"/>

</RelativeLayout>